# Scriptify

./: CMakeLists.txt
Example/src/: main.cpp
Scriptify/include/: dataHandler.h
Scriptify/src/: DataHandler.cpp
